--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,31 @@
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo 'No build step required for backend'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "echo 'Backend dependencies installed successfully'",
+    "lint": "echo 'Add linting if needed'",
+    "prod": "NODE_ENV=production node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "express",
+    "backend",
+    "api",
+    "mongodb",
+    "jwt",
+    "socket.io"
+  ],
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
+  "description": "Backend server with Express, MongoDB, JWT authentication and Socket.IO",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -28,4 +44,5 @@
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10"
   }
+  
 }
